More changes to the update
